retrieveUnpackaged/objects/Appsubscriber__c.object
<CustomObject>
    <description>This Object Keeps Track of Access Permissions</description>
    <fields>
        <fullName>Address__c</fullName>
        <description>Captures Users Address</description>
        <label>Address</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <description>Capture Users City</description>
        <inlineHelpText>Please Enter Your City</inlineHelpText>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <description>This Field is used to store the access code</description>
        <inlineHelpText>Please Enter The Security Code Provided</inlineHelpText>
        <label>Code</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Captures Country of user</description>
        <inlineHelpText>Please Enter Your Country</inlineHelpText>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <description>Captures User Email</description>
        <inlineHelpText>Please Enter Your Email</inlineHelpText>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PersonName__c</fullName>
        <description>Captures User Name</description>
        <inlineHelpText>Please Enter Yor Name</inlineHelpText>
        <label>Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <description>Captures User Phone Number</description>
        <inlineHelpText>Please Enter Your Phone Number</inlineHelpText>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <description>Captures User State</description>
        <inlineHelpText>Please Enter Your State</inlineHelpText>
        <label>State</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <defaultValue>&quot;Request Sent&quot;</defaultValue>
        <description>Notifies The Security Code Request Status</description>
        <label>Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <description>Users Zip Code</description>
        <inlineHelpText>Please Enter Your Zip Code</inlineHelpText>
        <label>Zip Code</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Appsubscriber</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Appsubscribers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>